--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "google-ads-api": "^13.0.0",
+    "google-auth-library": "^8.7.0",
+    "googleapis": "^118.0.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22"
   }
