--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "apexcharts": "^3.35.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "file-saver": "^2.0.5",
     "framer-motion": "^6.2.9",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
