--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "google-ads-api": "^13.0.0",
-    "google-auth-library": "^8.7.0",
-    "googleapis": "^118.0.0",
+    "express-async-handler": "^1.2.0",
+    "google-ads-api": "^13.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22"
   }
