--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     "apexcharts": "^3.35.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^6.2.9",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.2",
+    "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
